crates/vescpkg-rs/tests/ui/imu_vectors_not_interchangeable.stderr
error[E0308]: mismatched types
  --> tests/ui/imu_vectors_not_interchangeable.rs:24:17
   |
24 |     update_gyro(accel);
   |     ----------- ^^^^^ expected `ImuAngularRate`, found `ImuAcceleration`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/imu_vectors_not_interchangeable.rs:9:4
   |
 9 | fn update_gyro(_: ImuAngularRate) {}
   |    ^^^^^^^^^^^ -----------------
